# opensoar-integrations

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
integrations/crowdstrike/: README.md  actions.py  connector.py  manifest.yaml
integrations/crowdstrike/tests/: test_crowdstrike.py
integrations/jira/: README.md  actions.py  connector.py  manifest.yaml
integrations/jira/tests/: test_jira.py
integrations/misp/: README.md  actions.py  connector.py  manifest.yaml
integrations/misp/tests/: test_misp.py
integrations/pagerduty/: README.md  actions.py  connector.py  manifest.yaml
integrations/pagerduty/tests/: test_pagerduty.py
integrations/sentinelone/: README.md  actions.py  connector.py  manifest.yaml
integrations/sentinelone/tests/: test_sentinelone.py
opensoar_integrations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/integration-template/: README.md  actions.py  connector.py  manifest.yaml
templates/integration-template/tests/: test_integration.py
